--- a/main.tex
+++ b/main.tex
@@ -87,7 +87,7 @@ $Aula\ ES\ \seq{\seq{Alumno}}$\\
     \\ cantValidaEstudiantes(dimensionAula, cantEstudiantes)}
     \aseguraLargo{
     \norm{res.aula} = dimensionAula \yLuego
-    \\ \paraTodo{c1}{Coordenada}{(coordenadaValida(c1,res.aula) \yLuego res.aula[c1.f][c1.c] \neq \langle \rangle) \implicaLuego (edr.aula[c1.f][c1.c].coord.f = f \land edr.aula[c1.f][c1.c].coord.c = c)} \yLuego
+    \\ \paraTodo{c1}{Coordenada}{(coordenadaValida(c1,res.aula) \yLuego res.aula[c1.f][c1.c].examen \neq \langle \rangle) \implicaLuego (edr.aula[c1.f][c1.c].coord.f = f \land edr.aula[c1.f][c1.c].coord.c = c)} \yLuego
     \\ aulaCuadrada(res.aula) \yLuego
     \\ noHayAlumnosJuntos(res.aula) \yLuego
     \\ cuantosEstudiantes(res.aula) = cantEstudiantes \yLuego
@@ -119,18 +119,18 @@ $Aula\ ES\ \seq{\seq{Alumno}}$\\
 % si hay un alumno en el asiento entonces, el que le sigue tiene que ser vacio
 \predLargo{noHayAlumnosJuntos}{a: Aula}{
     \paraTodo{i}{\Z}{0 \leq i < \norm{a} \implicaLuego 
-    \\ \paraTodo{j}{\Z}{0 \leq j < \norm{a[i]}-1 \implicaLuego (a[i][j] \neq \langle \rangle \implica a[i][j+1] = \langle \rangle)}}
+    \\ \paraTodo{j}{\Z}{0 \leq j < \norm{a[i]}-1 \implicaLuego (a[i][j].examen \neq \langle \rangle \implica a[i][j+1].examen = \langle \rangle)}}
 }
 
 % cuantos estudiantes hay en el aula
 \aux{cuantosEstudiantes}{a: Aula}{\Z} \\
-    $\sum_{i=0}^{\norm{a}-1} \sum_{j=0}^{\norm{a[i]}-1} ifThenElse(a[i][j] \neq \langle \rangle,1,0)$
+    $\sum_{i=0}^{\norm{a}-1} \sum_{j=0}^{\norm{a[i]}-1} ifThenElse(a[i][j].examen \neq \langle \rangle,1,0)$
 \\
 \\
 
 % todos los examenes en el aula estan sin responder y son del largo correcto
 \predLargo{examenesInicializados}{a: Aula, sol: Examen}{
-    \paraTodo{c1}{Coordenada}{(coordenadaValida(c1, a) \yLuego a[c1.f][c1.c] \neq \langle \rangle) \implicaLuego 
+    \paraTodo{c1}{Coordenada}{(coordenadaValida(c1, a) \yLuego a[c1.f][c1.c].examen \neq \langle \rangle) \implicaLuego 
     \\ examenInicializado(a[c1.f][c1.c].examen, sol)}
 }
 
@@ -207,7 +207,7 @@ $Aula\ ES\ \seq{\seq{Alumno}}$\\
 % las coordenadas del alumno estan en el aula y el examen es el mismo
 
 \predLargo{perteneceAlumno}{e: Alumno, a:Aula}{
-    (coordenadaValida(e.coord, a) \yLuego a[e.coord.f][e.coord.c] \neq \langle \rangle \yLuego\\
+    (coordenadaValida(e.coord, a) \yLuego a[e.coord.f][e.coord.c].examen \neq \langle \rangle \yLuego\\
     a[e.coord.f][e.coord.c].examen = e.examen)
 }
 
@@ -320,7 +320,7 @@ $Aula\ ES\ \seq{\seq{Alumno}}$\\
     \aseguraLargo{
         % CAMBIO EL a.examen, ANTES REVISABA EL ULTIMO PASO
         (edr.entregas = edr_0.entregas \cup \conj{a}) \yLuego
-        \\ (edr.aula[a.coord.f][a.coord.c] = \langle \rangle) \yLuego
+        \\ (edr.aula[a.coord.f][a.coord.c].examen = \langle \rangle) \yLuego
         \\ (todosEstudiantesIgualesMenos(\langle a.coord \rangle,edr,edr_0)) \yLuego
         \\ (edr.solucion = edr_0.solucion) \yLuego
         \\ (edr.copiones = edr_0.copiones) \yLuego
@@ -358,7 +358,7 @@ $Aula\ ES\ \seq{\seq{Alumno}}$\\
 
 \predLargo{todosEntregaron}{edr: EdR}{
     \norm{edr.entregas} > 0 \land
-    \\\paraTodo{c1}{Coordenada}{coordenadaValida(c1,edr.aula) \implicaLuego edr.aula[c1.f][c1.c]=\langle \rangle}
+    \\\paraTodo{c1}{Coordenada}{coordenadaValida(c1,edr.aula) \implicaLuego edr.aula[c1.f][c1.c].examen = \langle \rangle}
 }
 
 \subsection{proc corregir}
