--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,7 @@
 
 \section{Aclaraciones}
 
-Tomamos un asiento vacío en el aula como un struct Alumno con Examen = $\langle \rangle$\\
+Tomamos un asiento vacío en el aula como un struct Alumno con examen = $\seq{}$\\
 En proc chequearCopias, en el aux porcentajeRespuestasIgualAdyacente aseguramos que se cuenten las respuestas vacías como coincidencias, debido a la aclaración de uno de los profesores, y en aux porcentajeIgualAula comparamos el examen entero con el \textbf{resto} del alumnado según lo especificado en la consigna.
 
 \section{Especificacion}
